--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"archieml": "^0.5.0",
 		"autoprefixer": "^10.4.13",
 		"d3": "^7.8.2",
+		"d3-hexbin": "^0.2.2",
+		"haversine-distance": "^1.2.1",
 		"layercake": "^7.2.2",
 		"lodash.debounce": "^4.0.8",
 		"lucide-svelte": "^0.109.0",
@@ -29,6 +31,7 @@
 		"svelte": "^3.55.1",
 		"svelte-copy": "^1.3.0",
 		"svelte-preprocess": "^5.0.1",
+		"topojson-client": "3",
 		"vite": "^4.1.1",
 		"vite-plugin-svgstring": "^1.0.0"
 	},
