--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"svelte": "^3.55.1",
 		"svelte-copy": "^1.3.0",
 		"svelte-preprocess": "^5.0.1",
+		"svelte-range-slider-pips": "^2.1.1",
 		"topojson-client": "3",
 		"vite": "^4.1.1",
 		"vite-plugin-svgstring": "^1.0.0"
