--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"gdoc": "node tasks/fetch-google.js",
 		"style": "node tasks/style-dictionary.js",
+		"render-maps": "node tasks/render-maps.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
