--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"svelte-copy": "^1.3.0",
 		"svelte-preprocess": "^5.0.1",
 		"svelte-range-slider-pips": "^2.1.1",
+		"svelte-typeahead": "^4.4.1",
 		"topojson-client": "3",
 		"vite": "^4.1.1",
 		"vite-plugin-svgstring": "^1.0.0"
