--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"gdoc": "node tasks/fetch-google.js",
 		"style": "node tasks/style-dictionary.js",
 		"render-maps": "node tasks/render-maps.js",
-		"prepare": "node tasks/prepare.js",
+		"data": "node tasks/data.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -18,7 +18,6 @@
 		"@sveltejs/kit": "1.5.0",
 		"archieml": "^0.5.0",
 		"autoprefixer": "^10.4.13",
-		"canvas": "^2.11.0",
 		"d3": "^7.8.2",
 		"d3-hexbin": "^0.2.2",
 		"haversine-distance": "^1.2.1",
