--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@rollup/plugin-dsv": "^3.0.2",
 		"@sveltejs/adapter-static": "2.0.0",
 		"@sveltejs/kit": "1.5.0",
+		"@zerodevx/svelte-toast": "^0.9.2",
 		"archieml": "^0.5.0",
 		"autoprefixer": "^10.4.13",
 		"d3": "^7.8.2",
