--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"style": "node tasks/style-dictionary.js",
 		"render-maps": "node tasks/render-maps.js",
 		"data": "node tasks/data.js",
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check --plugin-search-dir=. .",
