--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
 		"node": ">= 18.12.0"
 	},
 	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
-	"subdirectory": "same-name"
+	"subdirectory": "2023/03/same-name"
 }
