--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"render-maps": "node tasks/render-maps.js",
 		"data": "node tasks/data.js",
 		"dev": "vite dev",
-		"build": "vite build && cp -r build/* docs/",
+		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --check --plugin-search-dir=. .",
 		"format": "prettier --write --plugin-search-dir=. ."
