--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-dsv": "^3.0.2",
+		"@rollup/plugin-json": "^6.1.0",
 		"@sveltejs/adapter-static": "2.0.1",
 		"@sveltejs/kit": "1.12.0",
 		"@zerodevx/svelte-toast": "^0.9.2",
