--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,22 +1,16 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -51,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'build'  # Upload the build output, not the entire repo
+          path: 'build' 
 
       - name: Deploy to GitHub Pages
         id: deployment
@@ -61,4 +55,4 @@ jobs:
         run: |
           echo "Listing build directory contents:"
           ls -R build/
-        if: always()  # This will run even if previous steps fail
+        if: always()  
